--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "^3.2.4",
+    "@ionic/lab": "2.0.3",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project"
